# ChangeLog for media-plugins/libvisual-plugins
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.25 2006/11/11 22:31:12 flameeyes Exp $

  11 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Replace mkinstalldirs manually, to avoid failures.

  11 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Run eautoreconf, fixes bug #154398.

  06 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libvisual-plugins-0.4.0-cxxflags.patch,
  libvisual-plugins-0.4.0.ebuild:
  Clean up the dependencies a bit, add a patch to fix a CXXFLAGS=CFLAGS error.

  31 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Add ~x86-fbsd keyword.

  20 Oct 2006; Simon Stelling <blubb@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  stable on amd64

  18 Oct 2006; Joshua Jackson <tsunam@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Stable x86; for amarok

  14 Oct 2006; <nixnut@gentoo.org> libvisual-plugins-0.4.0.ebuild:
  Stable on ppc wrt bug 150988

  14 Oct 2006; Markus Rothe <corsair@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Stable on ppc64; bug #150988

  14 Oct 2006; Jason Wever <weeve@gentoo.org>
  libvisual-plugins-0.4.0.ebuild:
  Stable on SPARC wrt bug #150988.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  libvisual-plugins-0.2.0.ebuild, libvisual-plugins-0.4.0.ebuild:
  Pinpoint virtual/x11 version to less than 7.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  libvisual-plugins-0.2.0.ebuild, libvisual-plugins-0.4.0.ebuild:
  Remove xorg-server fake depend, was an artefact produced by the first dep
  checking scripts.

*libvisual-plugins-0.4.0 (28 May 2006)

  28 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libvisual-plugins-0.1.6.ebuild, -libvisual-plugins-0.1.7.ebuild,
  libvisual-plugins-0.2.0.ebuild, +libvisual-plugins-0.4.0.ebuild: