@@ -18,19 +18,24 @@ MD5 6008866a4e9c49686af6dae67d5abdea files/libvisual-plugins-0.4.0-cxxflags.patc
 RMD160 867c25539eba337d86a5128425f01db5ebce1ebd files/libvisual-plugins-0.4.0-cxxflags.patch 521
 SHA256 fd99f4dc93b04b371237f2e04286223ef25cc8bf4b134d696512fefac5ee6376 files/libvisual-plugins-0.4.0-cxxflags.patch 521
 DIST libvisual-plugins-0.2.0.tar.gz 1021051 RMD160 3f4835843e3719e6342a3b8f1478f89388423b37 SHA1 bc001f66b1c81b747bc06e3e09aaf71882c47370 SHA256 db3b3e0bfe3161dd27a9d189fa235e7ed8958faac0df5173dd3b728aaa06c7fe
+DIST libvisual-plugins-0.4.0-patches.tar.bz2 9634 RMD160 fd5e7cfa2e36d09f6a02e6f82f0ee124c4a1a195 SHA1 257125ffe7ac7c405b5e8e63d5ecaeb14d0393e0 SHA256 0c5be2c71a2c8257da5a2ff836ca61db93ce03f084f0927ae0c6d451ec9c541a
 DIST libvisual-plugins-0.4.0.tar.gz 828631 RMD160 f7a82f4a9e4dec3e877833612ece570ffbf2404d SHA1 20490573c282d900ec0bd05133cb3707640254f5 SHA256 8b783a111d54b92502085199c351979d0452b950fcddddd1eae28a16d8508e9b
 EBUILD libvisual-plugins-0.2.0.ebuild 1467 RMD160 b65151194b606554abcd408e341899b5e5b7ad7d SHA1 0543e3c0cfbd88e9e3fc720b65643ad396a4dfeb SHA256 e707d2766297914381e2d01bb6fa6105d56a25463c880571d6c9ac1dd4898ffd
 MD5 fc4728fdbab1e96be123fbec82c2e53e libvisual-plugins-0.2.0.ebuild 1467
 RMD160 b65151194b606554abcd408e341899b5e5b7ad7d libvisual-plugins-0.2.0.ebuild 1467
 SHA256 e707d2766297914381e2d01bb6fa6105d56a25463c880571d6c9ac1dd4898ffd libvisual-plugins-0.2.0.ebuild 1467
-EBUILD libvisual-plugins-0.4.0.ebuild 1324 RMD160 742a92986ae1797d80e5ac43c59c8e837cfdebc9 SHA1 5d7fa7d6ed5d9f6e16f5cdc1ed5dc4605f355dd9 SHA256 f5702d2f220ce03e3670b1838a8aba2ff8ce184b0d25d5567ae877cb7338e1d3
-MD5 afd91389692cf801d841e775a4642227 libvisual-plugins-0.4.0.ebuild 1324
-RMD160 742a92986ae1797d80e5ac43c59c8e837cfdebc9 libvisual-plugins-0.4.0.ebuild 1324
-SHA256 f5702d2f220ce03e3670b1838a8aba2ff8ce184b0d25d5567ae877cb7338e1d3 libvisual-plugins-0.4.0.ebuild 1324
-MISC ChangeLog 4222 RMD160 aee9d8e5a67823998383938d40b5cec408880bdb SHA1 2473c28c8cd082264a664d4ba9c8d24ada69dffe SHA256 e79b3e395956469b59d6d2168823b6d4a2b744e9cc17315aa0f572b535698415
-MD5 b16ba660d9e73717114394492f32ba0e ChangeLog 4222
-RMD160 aee9d8e5a67823998383938d40b5cec408880bdb ChangeLog 4222
-SHA256 e79b3e395956469b59d6d2168823b6d4a2b744e9cc17315aa0f572b535698415 ChangeLog 4222
+EBUILD libvisual-plugins-0.4.0-r1.ebuild 1524 RMD160 605ac5a3fd7a109abdf44d075587905b1c1ee4eb SHA1 6beca1ec64bee5daa06b0344bdd0e378731dda91 SHA256 d12c06957c2970bdc769b55319ff5bb66153730fcba7e78489cea6de724138d6
+MD5 eb7e4fed1ebda8666631abe0c5dee6ac libvisual-plugins-0.4.0-r1.ebuild 1524
+RMD160 605ac5a3fd7a109abdf44d075587905b1c1ee4eb libvisual-plugins-0.4.0-r1.ebuild 1524
+SHA256 d12c06957c2970bdc769b55319ff5bb66153730fcba7e78489cea6de724138d6 libvisual-plugins-0.4.0-r1.ebuild 1524
+EBUILD libvisual-plugins-0.4.0.ebuild 1323 RMD160 229d6b21647a73d093f9f12266917f606d61f9e4 SHA1 4bb26f3d82adeebe7c61ffcd4f66bcd18c12cac3 SHA256 a301bcc3fb602ccbdefb411233d3f448195be730f3301b7f3190642ac04006a3
+MD5 811da91552de18d2f30274bdd3d5b58e libvisual-plugins-0.4.0.ebuild 1323
+RMD160 229d6b21647a73d093f9f12266917f606d61f9e4 libvisual-plugins-0.4.0.ebuild 1323
+SHA256 a301bcc3fb602ccbdefb411233d3f448195be730f3301b7f3190642ac04006a3 libvisual-plugins-0.4.0.ebuild 1323
+MISC ChangeLog 4458 RMD160 f70b1a04ce071b9dc9f51eb414180aa5b41a95b1 SHA1 20564b9a6acd5ca35d33648c4985ddb123795536 SHA256 a27c1a625e87eb9005f20be238e6e28c3f5ad6ce277de839a5ee014e14ed64fc
+MD5 3cd040c22965cbb5af731c3aa0702e8a ChangeLog 4458
+RMD160 f70b1a04ce071b9dc9f51eb414180aa5b41a95b1 ChangeLog 4458
+SHA256 a27c1a625e87eb9005f20be238e6e28c3f5ad6ce277de839a5ee014e14ed64fc ChangeLog 4458
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
@@ -41,10 +46,13 @@ SHA256 cf47a3766bccd8b19b3cbc00e0852a5966e6b914da8d5b594c4718e539fbce11 files/di
 MD5 a2f534f23a71a0bc8442bb917e726b5c files/digest-libvisual-plugins-0.4.0 271
 RMD160 d807b3b4fb5f547088ee697a3b0c3ed19a05d7a3 files/digest-libvisual-plugins-0.4.0 271
 SHA256 385cb9ef49b1f49695406aa702a68514fbed39ce9d8cda537a1b048ae8a6c3a0 files/digest-libvisual-plugins-0.4.0 271
+MD5 9f9bbdc10591774e5817f0f60ad8c09e files/digest-libvisual-plugins-0.4.0-r1 563
+RMD160 282250f0a42c7ea99e1825fee4cd0c3ad9a44c5f files/digest-libvisual-plugins-0.4.0-r1 563
+SHA256 19e55a4626b190903cefac214cd5d29b55824dfe1497e4e5b0920356fbea5011 files/digest-libvisual-plugins-0.4.0-r1 563
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v2.0.2 (GNU/Linux)
 
-iD8DBQFFVk83AiZjviIA2XgRAuCeAKCJbApJNd5NS09uy8LpMAYLPlI4aACfRZEl
-2/P/jjLcthPE7GkbNznWCww=
-=9YRZ
+iD8DBQFFxhC/vFcC4BYPU0oRAtVuAJ4hZkFjl/hxOmby6tD7KZiE1llcxgCguaVQ
+JjoP1sAHITyuMbW5tRV0K2o=
+=KFLA
 -----END PGP SIGNATURE-----
