@@ -1,0 +1,6 @@
+MD5 1016263015262e807dfbf9e3ad93f09e libvisual-plugins-0.4.0-patches.tar.bz2 9634
+RMD160 fd5e7cfa2e36d09f6a02e6f82f0ee124c4a1a195 libvisual-plugins-0.4.0-patches.tar.bz2 9634
+SHA256 0c5be2c71a2c8257da5a2ff836ca61db93ce03f084f0927ae0c6d451ec9c541a libvisual-plugins-0.4.0-patches.tar.bz2 9634
+MD5 4330e9287f9d6fae02f482f428a1e77b libvisual-plugins-0.4.0.tar.gz 828631
+RMD160 f7a82f4a9e4dec3e877833612ece570ffbf2404d libvisual-plugins-0.4.0.tar.gz 828631
+SHA256 8b783a111d54b92502085199c351979d0452b950fcddddd1eae28a16d8508e9b libvisual-plugins-0.4.0.tar.gz 828631
