@@ -1,6 +1,13 @@
 # ChangeLog for media-plugins/libvisual-plugins
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.25 2006/11/11 22:31:12 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.26 2007/02/04 16:58:32 aballier Exp $
+
+*libvisual-plugins-0.4.0-r1 (04 Feb 2007)
+
+  04 Feb 2007; Alexis Ballier <aballier@gentoo.org>
+  +libvisual-plugins-0.4.0-r1.ebuild:
+  Add lot of patches from David Leverton <u01drl3@abdn.ac.uk>, closes bugs
+  #159101, #159159, #159182
 
   11 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
   libvisual-plugins-0.4.0.ebuild:
